# edi-voxel

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
edi_voxel_account_invoice_oca/: README.rst
edi_voxel_account_invoice_oca/reports/: report_voxel_invoice.py
edi_voxel_account_invoice_oca/static/description/: index.html
edi_voxel_oca/: README.rst
edi_voxel_oca/i18n/: edi_voxel_oca.pot  es.po  it.po
edi_voxel_oca/models/: voxel_mixin.py
edi_voxel_oca/static/description/: index.html
edi_voxel_sale_order_import_oca/: README.rst
edi_voxel_sale_order_import_oca/i18n/: it.po
edi_voxel_sale_order_import_oca/models/: sale_order.py
edi_voxel_sale_order_import_oca/readme/: CONFIGURE.md
edi_voxel_sale_order_import_oca/static/description/: index.html
edi_voxel_sale_secondary_unit_oca/: README.rst  __manifest__.py
edi_voxel_sale_secondary_unit_oca/i18n/: edi_voxel_sale_secondary_unit_oca.pot  it.po
edi_voxel_sale_secondary_unit_oca/readme/: DESCRIPTION.md
edi_voxel_sale_secondary_unit_oca/tests/: test_edi_voxel_sale_secondary_unit.py
edi_voxel_secondary_unit_oca/: README.rst  __manifest__.py
edi_voxel_stock_picking_oca/: README.rst  __manifest__.py
edi_voxel_stock_picking_oca/models/: stock_picking.py
edi_voxel_stock_picking_oca/tests/: test_voxel_stock_picking.py
edi_voxel_stock_picking_oca/views/: res_partner_view.xml  stock_picking_views.xml
edi_voxel_stock_picking_secondary_unit_oca/: README.rst  __manifest__.py
edi_voxel_stock_picking_secondary_unit_oca/readme/: DESCRIPTION.md
setup/_metapackage/: pyproject.toml
(+4 files in other folders)
