[project]
name = "odoo-addons-oca-edi-voxel"
version = "17.0.20250821.1"
dependencies = [
    "odoo-addon-edi_voxel_account_invoice_oca>=17.0dev,<17.1dev",
    "odoo-addon-edi_voxel_oca>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
